docs: atualizar swagger com documentação das endpoints otimizadas
